# routes/api/v1.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\V1\JournalEntryController;
 use App\Http\Controllers\Api\V1\MeController;
 use Illuminate\Support\Facades\Route;
 
@@ -14,4 +15,5 @@ use Illuminate\Support\Facades\Route;
 
 Route::middleware('auth')->group(function () {
     Route::get('/me', [MeController::class, 'show'])->name('me');
+    Route::get('/journal/entries/{id}', [JournalEntryController::class, 'show'])->name('journal.entries.show');
 });
